# OBJReader

./: .gitignore  CMakeLists.txt  todo.md
assets/model/: Pikachus.7z  bola.mtl
assets/model/cow/: uvmappedcow.mtl
assets/scene/: scene01.sf  scene02.sf
assets/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
src/File/: FileReader.cpp  FileReader.h  MTLReader.cpp  MTLReader.h  OBJReader.cpp  OBJReader.h  SceneReader.cpp  SceneReader.h
src/GL/: .Window.cpp.swp  Context.cpp  Context.h  RenderObject.cpp  RenderObject.h  ShaderProgram.cpp  ShaderProgram.h  Window.cpp  Window.h
src/GL/Object/: Animation.h  RenderObject.h  SceneObject.cpp  SceneObject.h
src/Program/: .DrawProgram.h.swp  .OBJReaderCube.cpp.swp  DrawProgram.h  FileBasedScene.cpp  FileBasedScene.h  MultipleObjectScene.cpp  MultipleObjectScene.h  OBJReaderCube.cpp  OBJReaderCube.h  Scene.cpp  Scene.h  StaticCube.cpp  StaticCube.h  StaticTriangleIndexes.cpp  StaticTriangleIndexes.h
src/Program/Animations/: CurveAnimation.cpp  CurveAnimation.h
